--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -14,6 +14,10 @@ services:
       - ./dataset:/app/dataset
       - ./output:/app/output
       - ./report:/app/report
+    # Map host.docker.internal to the host gateway so the container can reach
+    # MailHog if it's running on the host (Linux requires this mapping).
+    extra_hosts:
+      - "host.docker.internal:host-gateway"
     stdin_open: true
     tty: true
     command: python3 workflow/main_workflow.py
